#pragma once

#ifndef DEBUG
#include "behavior.hpp"
#include "stateController.hpp"
#endif // !DEBUG

// TODO: add docstrings

#include <utility>
#include <vector>
#include <iostream>
namespace Pronounce {
	class Sequence : public Behavior {
	private:
		std::vector<StateController*> stateControllers;
		std::vector<Behavior*> behaviors;

		int currentIndex = 0;
	public:
		explicit Sequence(std::string name) : Behavior(std::move(name)) {}

		void initialize() {
			currentIndex = 0;
			if (behaviors.size() > 0) {
				stateControllers.at(currentIndex)->setCurrentBehavior(behaviors.at(currentIndex));
			}
		}

		void update() {
			
			// If the current behavior is done then we will move onto the next behavior
			if (behaviors.at(currentIndex)->isDone()) {
				if (currentIndex < stateControllers.size() - 1) {
					currentIndex++;
					stateControllers.at(currentIndex)->setCurrentBehavior(behaviors.at(currentIndex));
				}
				else {
					// std::cout << this->getName() << "Ending" << std::endl;
					stateControllers.at(currentIndex)->useDefaultBehavior();
					currentIndex++;
					// Done
				}
			}
		}

		void exit() {
			if (!this->isDone()) {
				stateControllers.at(currentIndex)->useDefaultBehavior();
				currentIndex = stateControllers.size() - 1;
			}
		}

		bool isDone() {
			return currentIndex >= stateControllers.size();
		}

		void addState(StateController* stateController, Behavior* behavior) {
			stateControllers.emplace_back(stateController);
			behaviors.emplace_back(behavior);
		}

		~Sequence() {}
	};
} // namespace Pronounce
